fix: persiste transaction JPA